# LLM-Assisted-Office-Agent

./: .gitignore  README.md  ROADMAP.md  agent_console.ps1  desktop_app.ps1  desktop_backend.py  phase1_source.txt  pyproject.toml  requirements-train.txt  requirements.txt  run_app.ps1  run_tests.ps1  start_agent.cmd  training_mode.ps1
app/: __init__.py  main.py  runtime.py  ui_models.py  ui_tk.py  web_gui.py
controllers/: __init__.py  browser_playwright.py  desktop_windows.py  files_local.py  vision_capture.py  vision_ocr.py
core/: __init__.py  command_registry.py  executor.py  logging_setup.py  memory.py  models.py  observer.py  recovery.py  review_queue.py  safety.py  state_contracts.py  state_detector.py  utils.py  validator.py  workflow_engine.py
data/: gui_preferences.json  memory.db
datasets/: local_agent_eval.jsonl  local_agent_train.jsonl  local_agent_train_merged.jsonl
image_pipeline/: confidence.py  cropper.py  ocr_reader.py  parser.py  preprocess.py
llm/: __init__.py  confidence.py  dataset_validator.py  interpreter.py  local_agent.py  local_openai_client.py  planner.py  prompts.py  schemas.py  screen_context.py  tool_registry.py
llm_training/: README.md  check_local_server.py  evaluate_local_agent.py  evaluation.py  feedback_store.py  smoke_train_tiny.ps1  start_lm_studio_server.ps1  start_ollama_server.ps1  train_feedback_loop.ps1  train_peft.py  training_data.py
operator_runtime/: __init__.py  checkpoint_manager.py  exception_queue.py  scheduler.py  session_manager.py  summary_manager.py  task_queue.py
registry/: commands.json  (+3 more)
(+37 files in other folders)
