[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-assisted-office-agent"
version = "0.1.0"
description = "Deterministic desktop automation core for an LLM-assisted office agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
automation = [
    "playwright>=1.50",
    "pywinauto>=0.6.8",
]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
